Feat: Create table structure and half way coloring it with chess board pattern

--- a/index.html
+++ b/index.html
@@ -1,11 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minitask 2 | Chess Board</title>
 </head>
+
 <body>
-    
+    <table border="1">
+        <thead>
+            <tr>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td></td>
+                <td bgcolor="#000000"></td>
+                <td></td>
+                <td bgcolor="#000000"></td>
+                <td></td>
+                <td bgcolor="#000000"></td>
+                <td></td>
+                <td bgcolor="#000000"></td>
+            </tr>
+            <tr>
+                <td bgcolor="#000000"></td>
+                <td></td>
+                <td bgcolor="#000000"></td>
+                <td></td>
+                <td bgcolor="#000000"></td>
+                <td></td>
+                <td bgcolor="#000000"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td bgcolor="#000000"></td>
+                <td></td>
+                <td bgcolor="#000000"></td>
+                <td></td>
+                <td bgcolor="#000000"></td>
+                <td></td>
+                <td bgcolor="#000000"></td>
+            </tr>
+            <tr>
+                <td bgcolor="#000000"></td>
+                <td></td>
+                <td bgcolor="#000000"></td>
+                <td></td>
+                <td bgcolor="#000000"></td>
+                <td></td>
+                <td bgcolor="#000000"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
+
 </html>
