Update: finish coloring chessboard like pattern

--- a/index.html
+++ b/index.html
@@ -64,42 +64,42 @@
             </tr>
             <tr>
                 <td></td>
+                <td bgcolor="#000000"></td>
                 <td></td>
+                <td bgcolor="#000000"></td>
                 <td></td>
+                <td bgcolor="#000000"></td>
                 <td></td>
+                <td bgcolor="#000000"></td>
+            </tr>
+            <tr>
+                <td bgcolor="#000000"></td>
                 <td></td>
+                <td bgcolor="#000000"></td>
                 <td></td>
+                <td bgcolor="#000000"></td>
                 <td></td>
+                <td bgcolor="#000000"></td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
+                <td bgcolor="#000000"></td>
                 <td></td>
+                <td bgcolor="#000000"></td>
                 <td></td>
+                <td bgcolor="#000000"></td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td bgcolor="#000000"></td>
             </tr>
             <tr>
+                <td bgcolor="#000000"></td>
                 <td></td>
+                <td bgcolor="#000000"></td>
                 <td></td>
+                <td bgcolor="#000000"></td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td bgcolor="#000000"></td>
                 <td></td>
             </tr>
         </tbody>
