Update: fix table header it's should reversed and add tfooter for chessboard like label

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <table border="1">
         <thead>
             <tr>
-                <th>A</th>
-                <th>B</th>
-                <th>C</th>
-                <th>D</th>
-                <th>E</th>
-                <th>F</th>
-                <th>G</th>
                 <th>H</th>
+                <th>G</th>
+                <th>F</th>
+                <th>E</th>
+                <th>D</th>
+                <th>C</th>
+                <th>B</th>
+                <th>A</th>
             </tr>
         </thead>
         <tbody>
@@ -103,6 +103,18 @@
                 <td></td>
             </tr>
         </tbody>
+        <tfooter>
+            <tr>
+                <th>A</th>
+                <th>B</th>
+                <th>C</th>
+                <th>D</th>
+                <th>E</th>
+                <th>F</th>
+                <th>G</th>
+                <th>H</th>
+            </tr>
+        </tfooter>
     </table>
 </body>
 
