Update: align the head, foot, side label to center and now column and row has 40 width and height

--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
 </head>
 
 <body>
-    <table border="1">
+    <table border="1" align="center">
         <thead>
             <tr>
-                <th>H</th>
-                <th>G</th>
-                <th>F</th>
-                <th>E</th>
-                <th>D</th>
-                <th>C</th>
-                <th>B</th>
-                <th>A</th>
+                <th width="40" height="40"></th>
+                <th width="40" height="40">H</th>
+                <th width="40" height="40">G</th>
+                <th width="40" height="40">F</th>
+                <th width="40" height="40">E</th>
+                <th width="40" height="40">D</th>
+                <th width="40" height="40">C</th>
+                <th width="40" height="40">B</th>
+                <th width="40" height="40">A</th>
+                <th width="40" height="40"></th>
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr width="40" height="40">
+                <td align="center">1</td>
                 <td></td>
                 <td bgcolor="#000000"></td>
                 <td></td>
@@ -31,8 +34,10 @@
                 <td bgcolor="#000000"></td>
                 <td></td>
                 <td bgcolor="#000000"></td>
+                <td align="center">8</td>
             </tr>
-            <tr>
+            <tr width="40" height="40">
+                <td align="center">2</td>
                 <td bgcolor="#000000"></td>
                 <td></td>
                 <td bgcolor="#000000"></td>
@@ -41,8 +46,10 @@
                 <td></td>
                 <td bgcolor="#000000"></td>
                 <td></td>
+                <td align="center">7</td>
             </tr>
-            <tr>
+            <tr width="40" height="40">
+                <td align="center">3</td>
                 <td></td>
                 <td bgcolor="#000000"></td>
                 <td></td>
@@ -51,8 +58,10 @@
                 <td bgcolor="#000000"></td>
                 <td></td>
                 <td bgcolor="#000000"></td>
+                <td align="center">6</td>
             </tr>
-            <tr>
+            <tr width="40" height="40">
+                <td align="center">4</td>
                 <td bgcolor="#000000"></td>
                 <td></td>
                 <td bgcolor="#000000"></td>
@@ -61,8 +70,10 @@
                 <td></td>
                 <td bgcolor="#000000"></td>
                 <td></td>
+                <td align="center">5</td>
             </tr>
-            <tr>
+            <tr width="40" height="40">
+                <td align="center">5</td>
                 <td></td>
                 <td bgcolor="#000000"></td>
                 <td></td>
@@ -71,8 +82,10 @@
                 <td bgcolor="#000000"></td>
                 <td></td>
                 <td bgcolor="#000000"></td>
+                <td align="center">4</td>
             </tr>
-            <tr>
+            <tr width="40" height="40">
+                <td align="center">6</td>
                 <td bgcolor="#000000"></td>
                 <td></td>
                 <td bgcolor="#000000"></td>
@@ -81,8 +94,10 @@
                 <td></td>
                 <td bgcolor="#000000"></td>
                 <td></td>
+                <td align="center">3</td>
             </tr>
-            <tr>
+            <tr width="40" height="40">
+                <td align="center">7</td>
                 <td></td>
                 <td bgcolor="#000000"></td>
                 <td></td>
@@ -91,8 +106,10 @@
                 <td bgcolor="#000000"></td>
                 <td></td>
                 <td bgcolor="#000000"></td>
+                <td align="center">2</td>
             </tr>
-            <tr>
+            <tr width="40" height="40">
+                <td align="center">8</td>
                 <td bgcolor="#000000"></td>
                 <td></td>
                 <td bgcolor="#000000"></td>
@@ -101,18 +118,21 @@
                 <td></td>
                 <td bgcolor="#000000"></td>
                 <td></td>
+                <td align="center">1</td>
             </tr>
         </tbody>
         <tfooter>
             <tr>
-                <th>A</th>
-                <th>B</th>
-                <th>C</th>
-                <th>D</th>
-                <th>E</th>
-                <th>F</th>
-                <th>G</th>
-                <th>H</th>
+                <th width="40" height="40"></th>
+                <th width="40" height="40">A</th>
+                <th width="40" height="40">B</th>
+                <th width="40" height="40">C</th>
+                <th width="40" height="40">D</th>
+                <th width="40" height="40">E</th>
+                <th width="40" height="40">F</th>
+                <th width="40" height="40">G</th>
+                <th width="40" height="40">H</th>
+                <th width="40" height="40"></th>
             </tr>
         </tfooter>
     </table>
