--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <table border="1" align="center">
+    <table border="1">
         <thead>
             <tr>
                 <th width="40" height="40"></th>
@@ -26,98 +26,98 @@
         <tbody>
             <tr width="40" height="40">
                 <td align="center">1</td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
                 <td align="center">8</td>
             </tr>
             <tr width="40" height="40">
                 <td align="center">2</td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td align="center">7</td>
             </tr>
             <tr width="40" height="40">
                 <td align="center">3</td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
                 <td align="center">6</td>
             </tr>
             <tr width="40" height="40">
                 <td align="center">4</td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td align="center">5</td>
             </tr>
             <tr width="40" height="40">
                 <td align="center">5</td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
                 <td align="center">4</td>
             </tr>
             <tr width="40" height="40">
                 <td align="center">6</td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td align="center">3</td>
             </tr>
             <tr width="40" height="40">
                 <td align="center">7</td>
-                <td></td>
-                <td bgcolor="#000000"></td>
-                <td></td>
-                <td bgcolor="#000000"></td>
-                <td></td>
-                <td bgcolor="#000000"></td>
-                <td></td>
-                <td bgcolor="#000000"></td>
+                <td align="center" bgcolor="#A0A0A0"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
+                <td bgcolor="#000000"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
+                <td align="center" bgcolor="#A0A0A0"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
+                <td bgcolor="#000000"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
+                <td align="center" bgcolor="#A0A0A0"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
+                <td bgcolor="#000000"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
+                <td align="center" bgcolor="#A0A0A0"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
+                <td bgcolor="#000000"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
                 <td align="center">2</td>
             </tr>
             <tr width="40" height="40">
                 <td align="center">8</td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"><img src="king-white.svg" alt="King" width="40" height="40"></td>
+                <td bgcolor="#000000"><img src="queen-white.svg" alt="Queen" width="40" height="40"></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td bgcolor="#000000"></td>
-                <td></td>
-                <td bgcolor="#000000"></td>
-                <td></td>
+                <td align="center" bgcolor="#A0A0A0"></td>
                 <td align="center">1</td>
             </tr>
         </tbody>
