--- a/index.html
+++ b/index.html
@@ -8,134 +8,88 @@
 </head>
 
 <body>
-    <table border="1">
-        <thead>
-            <tr>
-                <th width="40" height="40"></th>
-                <th width="40" height="40">H</th>
-                <th width="40" height="40">G</th>
-                <th width="40" height="40">F</th>
-                <th width="40" height="40">E</th>
-                <th width="40" height="40">D</th>
-                <th width="40" height="40">C</th>
-                <th width="40" height="40">B</th>
-                <th width="40" height="40">A</th>
-                <th width="40" height="40"></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr width="40" height="40">
-                <td align="center">1</td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center">8</td>
-            </tr>
-            <tr width="40" height="40">
-                <td align="center">2</td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td align="center">7</td>
-            </tr>
-            <tr width="40" height="40">
-                <td align="center">3</td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center">6</td>
-            </tr>
-            <tr width="40" height="40">
-                <td align="center">4</td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td align="center">5</td>
-            </tr>
-            <tr width="40" height="40">
-                <td align="center">5</td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center">4</td>
-            </tr>
-            <tr width="40" height="40">
-                <td align="center">6</td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td align="center">3</td>
-            </tr>
-            <tr width="40" height="40">
-                <td align="center">7</td>
-                <td align="center" bgcolor="#A0A0A0"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
-                <td bgcolor="#000000"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
-                <td align="center" bgcolor="#A0A0A0"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
-                <td bgcolor="#000000"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
-                <td align="center" bgcolor="#A0A0A0"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
-                <td bgcolor="#000000"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
-                <td align="center" bgcolor="#A0A0A0"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
-                <td bgcolor="#000000"><img src="pawn-white.svg" alt="pawn" width="40" height="40"></td>
-                <td align="center">2</td>
-            </tr>
-            <tr width="40" height="40">
-                <td align="center">8</td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"><img src="king-white.svg" alt="King" width="40" height="40"></td>
-                <td bgcolor="#000000"><img src="queen-white.svg" alt="Queen" width="40" height="40"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td bgcolor="#000000"></td>
-                <td align="center" bgcolor="#A0A0A0"></td>
-                <td align="center">1</td>
-            </tr>
-        </tbody>
-        <tfooter>
-            <tr>
-                <th width="40" height="40"></th>
-                <th width="40" height="40">A</th>
-                <th width="40" height="40">B</th>
-                <th width="40" height="40">C</th>
-                <th width="40" height="40">D</th>
-                <th width="40" height="40">E</th>
-                <th width="40" height="40">F</th>
-                <th width="40" height="40">G</th>
-                <th width="40" height="40">H</th>
-                <th width="40" height="40"></th>
-            </tr>
-        </tfooter>
-    </table>
+    <div class="chessboard">
+        <div class="A">
+            <div class="1"></div>
+            <div class="2"></div>
+            <div class="3"></div>
+            <div class="4"></div>
+            <div class="5"></div>
+            <div class="6"></div>
+            <div class="7"></div>
+            <div class="8"></div>
+        </div>
+        <div class="B">
+            <div class="1"></div>
+            <div class="2"></div>
+            <div class="3"></div>
+            <div class="4"></div>
+            <div class="5"></div>
+            <div class="6"></div>
+            <div class="7"></div>
+            <div class="8"></div>
+        </div>
+        <div class="C">
+            <div class="1"></div>
+            <div class="2"></div>
+            <div class="3"></div>
+            <div class="4"></div>
+            <div class="5"></div>
+            <div class="6"></div>
+            <div class="7"></div>
+            <div class="8"></div>
+        </div>
+        <div class="D">
+            <div class="1"></div>
+            <div class="2"></div>
+            <div class="3"></div>
+            <div class="4"></div>
+            <div class="5"></div>
+            <div class="6"></div>
+            <div class="7"></div>
+            <div class="8"></div>
+        </div>
+        <div class="E">
+            <div class="1"></div>
+            <div class="2"></div>
+            <div class="3"></div>
+            <div class="4"></div>
+            <div class="5"></div>
+            <div class="6"></div>
+            <div class="7"></div>
+            <div class="8"></div>
+        </div>
+        <div class="F">
+            <div class="1"></div>
+            <div class="2"></div>
+            <div class="3"></div>
+            <div class="4"></div>
+            <div class="5"></div>
+            <div class="6"></div>
+            <div class="7"></div>
+            <div class="8"></div>
+        </div>
+        <div class="G">
+            <div class="1"></div>
+            <div class="2"></div>
+            <div class="3"></div>
+            <div class="4"></div>
+            <div class="5"></div>
+            <div class="6"></div>
+            <div class="7"></div>
+            <div class="8"></div>
+        </div>
+        <div class="H">
+            <div class="1"></div>
+            <div class="2"></div>
+            <div class="3"></div>
+            <div class="4"></div>
+            <div class="5"></div>
+            <div class="6"></div>
+            <div class="7"></div>
+            <div class="8"></div>
+        </div>
+    </div>
 </body>
 
 </html>
