Feat: Halfway Create Chessboard Background

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minitask 2 | Chess Board</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
