Feat: add top bottom chessboard label

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="chessboard">
         <div class="A">
+            <div class="top-label">H</div>
             <div class="1"></div>
             <div class="2"></div>
             <div class="3"></div>
@@ -19,8 +20,10 @@
             <div class="6"></div>
             <div class="7"></div>
             <div class="8"></div>
+            <div class="bottom-label">A</div>
         </div>
         <div class="B">
+            <div class="top-label">G</div>
             <div class="1"></div>
             <div class="2"></div>
             <div class="3"></div>
@@ -29,8 +32,10 @@
             <div class="6"></div>
             <div class="7"></div>
             <div class="8"></div>
+            <div class="bottom-label">B</div>
         </div>
         <div class="C">
+            <div class="top-label">F</div>
             <div class="1"></div>
             <div class="2"></div>
             <div class="3"></div>
@@ -39,8 +44,10 @@
             <div class="6"></div>
             <div class="7"></div>
             <div class="8"></div>
+            <div class="bottom-label">C</div>
         </div>
         <div class="D">
+            <div class="top-label">E</div>
             <div class="1"></div>
             <div class="2"></div>
             <div class="3"></div>
@@ -49,8 +56,10 @@
             <div class="6"></div>
             <div class="7"></div>
             <div class="8"></div>
+            <div class="bottom-label">D</div>
         </div>
         <div class="E">
+            <div class="top-label">D</div>
             <div class="1"></div>
             <div class="2"></div>
             <div class="3"></div>
@@ -59,8 +68,10 @@
             <div class="6"></div>
             <div class="7"></div>
             <div class="8"></div>
+            <div class="bottom-label">E</div>
         </div>
         <div class="F">
+            <div class="top-label">C</div>
             <div class="1"></div>
             <div class="2"></div>
             <div class="3"></div>
@@ -69,8 +80,10 @@
             <div class="6"></div>
             <div class="7"></div>
             <div class="8"></div>
+            <div class="bottom-label">F</div>
         </div>
         <div class="G">
+            <div class="top-label">B</div>
             <div class="1"></div>
             <div class="2"></div>
             <div class="3"></div>
@@ -79,8 +92,10 @@
             <div class="6"></div>
             <div class="7"></div>
             <div class="8"></div>
+            <div class="bottom-label">G</div>
         </div>
         <div class="H">
+            <div class="top-label">A</div>
             <div class="1"></div>
             <div class="2"></div>
             <div class="3"></div>
@@ -89,6 +104,7 @@
             <div class="6"></div>
             <div class="7"></div>
             <div class="8"></div>
+            <div class="bottom-label">H</div>
         </div>
     </div>
 </body>
