Refactor: From external css to internal css to match task requirement

--- a/index.html
+++ b/index.html
@@ -6,6 +6,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minitask 2 | Chess Board</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background: #707070;
+        }
+
+        .chessboard div {
+            width: 40px;
+            height: 40px;
+            display: inline-block;
+            text-align: center;
+        }
+
+
+        .A div:nth-child(odd) {
+            background: white;
+        }
+
+        .A div:nth-child(even) {
+            background: black;
+        }
+
+        .B div:nth-child(odd) {
+            background: black;
+        }
+
+        .B div:nth-child(even) {
+            background: white;
+        }
+
+        .C div:nth-child(odd) {
+            background: white;
+        }
+
+        .C div:nth-child(even) {
+            background: black;
+        }
+
+        .D div:nth-child(odd) {
+            background: black;
+        }
+
+        .D div:nth-child(even) {
+            background: white;
+        }
+
+        .E div:nth-child(odd) {
+            background: white;
+        }
+
+        .E div:nth-child(even) {
+            background: black;
+        }
+
+        .F div:nth-child(odd) {
+            background: black;
+        }
+
+        .F div:nth-child(even) {
+            background: white;
+        }
+
+        .G div:nth-child(odd) {
+            background: white;
+        }
+
+        .G div:nth-child(even) {
+            background: black;
+        }
+
+        .H div:nth-child(odd) {
+            background: black;
+        }
+
+        .H div:nth-child(even) {
+            background: white;
+        }
+
+        .chessboard div:first-child {
+            background: transparent
+        }
+
+        .chessboard div:last-child {
+            background: transparent
+        }
+    </style>
 </head>
 
 <body>
